# talentchainpro

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SETUP_GUIDE.md  STEP_1_TALENT_POOL_SERVICE.md
backend/: .env.example  .env.production  BACKEND_API_ALIGNMENT_REPORT.md  CONTRACT_ALIGNMENT_ANALYSIS.md  DATABASE_README.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS_IMPLEMENTATION_GUIDE.md  STEP_2_REPUTATION_SERVICE.md  STEP_3_API_ENDPOINTS.md  api_demo.py  check_tests.py  contracts.json  debug_pool.py  env.example  hedera_setup_guide.sh  integration_test_results_20250815_041743.json  pyproject.toml  requirements.txt  run_test.py  run_test_directly.py  run_tests.py  setup.py  setup_production.py  start_server.py  test_database.py  test_integration.py
backend/app/: config.py  database.py  main.py
backend/app/api/: governance.py  mcp.py  pools.py  pools_fixed.py  reputation.py  skills.py  skills_enhanced.py
backend/app/models/: __init__.py  common_schemas.py  database.py  governance_schemas.py  pools_schemas.py  reputation_schemas.py  schemas.py  skills_schemas.py
backend/app/services/: governance.py  mcp.py  pool.py  reputation.py  skill.py
backend/app/utils/: ai_oracle.py  auth.py  hedera.py  hedera_enhanced.py  hedera_unified.py  mcp_server.py
backend/contracts/abis/: Governance.json  ReputationOracle.json  SkillToken.json  TalentPool.json
backend/scripts/: create_hcs_topics.py  deploy_skill_token.py  fix_contract_sync.py  test_mcp_integration.py
backend/tests/: conftest.py  test_contract_integration.py  test_credentials.py  test_governance.py  test_mcp.py  test_pools.py  test_reputation.py  test_reputation_fixed.py  test_skills.py  test_skills_fixed.py  test_skills_sync.py
backend/tests/utils/: run_specific_test.py  run_test_directly.py  run_tests.py  verify_tests.py
contracts/: .env.example  README.md  SkillToken.sol  TalentPool.sol  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: Governance.sol  ReputationOracle.sol  SkillToken.sol  SkillTokenSimple.sol  TalentPool.sol  TalentPoolSimple.sol
contracts/deployments/: testnet.json
contracts/scripts/: deploy-governance.js  deploy.js  setup.js  verify.js
contracts/test/: Governance.test.js  Integration.test.js  PoolLibrary.test.js  ReputationOracle.test.js  SkillLibrary.test.js  (+4 more)
docs/: BACKEND_API_ALIGNMENT_REPORT.md  COMPLETE_CONTRACT_ALIGNMENT.md  CONTRACT_SCHEMA_ALIGNMENT.md  DIALOG_INTEGRATION_SUMMARY.md  FRONTEND_CONTRACT_ALIGNMENT.md  README.md  STEP_1_TALENT_POOL_SERVICE.md  STEP_2_REPUTATION_SERVICE.md  backend-implementation-checklist.md  complete-contract-function-mapping.md  complete-deployment-guide.md  development-action-plan.md  enterprise-integration-analysis.md  frontend-implementation-checklist.md  frontend-prd.md  implementation-roadmap.md  talentchainpro.md  talentchainproPRD.md  test-suite-completion.md  wallet-setup-guide.md
frontend/: .env.local.example  DASHBOARD_INTEGRATION_SUMMARY.md  FRONTEND_CONTRACT_ALIGNMENT_REPORT.md  GOVERNANCE_WIDGET_CLEANUP_SUMMARY.md  LINTING_FIXES_SUMMARY.md  README.md  env.example  next.config.mjs  package-lock.json  package.json  setup-env.sh  tailwind.config.ts
(+88 files in other folders)
